fix: remove scrollbar

--- a/master.css
+++ b/master.css
@@ -6,6 +6,16 @@ body {
   background-color: #262626;
 }
 
+body,
+html {
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 .snake {
   background-color: #ec2127;
   border-radius: 4px;
